--- a/frontend/style.css
+++ b/frontend/style.css
@@ -30,6 +30,7 @@ body {
     margin: 0 auto;
     border-radius: 30px;
     background-color: rgba(212,217,219, 0.9);
+    box-sizing: border-box;
 }
 
 h1 {
@@ -65,17 +66,27 @@ h1 {
     color: #065ab5;
 }
 
+.login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .link {
     width:225px;
     height: 60px;
     font-size: 23px;
     box-sizing: border-box;
-    margin: 0 20px 20px 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 20px 10px 50px;
     border-radius: 7px;
     background-color: var(--button-color);
     border: none;
     box-shadow: 0 0 2px 2px var(--button-color);
     transition: 0.2s;
+    color: rgb(243,239,125);
 }
 
 .link a{
@@ -87,6 +98,7 @@ h1 {
     background-color: rgba(255,163,0, 1.0);
     transition: 0.7s;
     box-shadow: 0 0 4px 4px rgb(0,0,0);
+    color:black;
 }
 
 
