--- a/frontend/style.css
+++ b/frontend/style.css
@@ -10,9 +10,9 @@
 body {
     box-sizing: border-box;
     font-family: Arial, sans-serif;
-    background-image: url("./assets/menu/background51.png");
+    background-image: url("./assets/background/bc.png");
     background-repeat: repeat;
-    background-size: auto;
+    background-size: cover;
     zoom:1;
 }
 .body {
@@ -291,7 +291,7 @@ h1 {
     height:424px;
     background-color: rgba(255, 241, 232, 0.7);
     opacity: 0;
-    transition: opacity 0.5s ease;
+    transition: opacity 0.5s linear(0 0%, 1 10%);;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -333,12 +333,12 @@ h1 {
 .tekstRace {
     position: absolute;
     margin-top: 10px;
-    margin-left: 15px;
-    width: 140px;
+    margin-left: 10px;
+    width: 145px;
     height: 140px;
     background-color: rgba(255, 241, 232, 0.7);
     opacity: 0;
-    transition: opacity 0.5s linear(0 0%, 1 100%);
+    transition: opacity 0.5s linear(0 0%, 1 10%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -361,14 +361,9 @@ h1 {
 }
 
 #race:hover {
-    transform: scale(1.01);
+    transform: scale(1.03);
 
 }
-/*
-#race:hover {
-    background-color: yellow;
-
-}*/
 
 #garage {
     background-image: url("./assets/city/garaz.png");
@@ -377,11 +372,45 @@ h1 {
     background-size: cover;
     margin-top: 407px;
     box-sizing: border-box;
+    background-position: inherit;
+    position: relative;
+    display:inline-block;
+}
+
+.tekstGarage {
+    position: absolute;
+    margin-top: 3px;
+    margin-left: 3px;
+    width: 158px;
+    height: 147px;
+    background-color: rgba(255, 241, 232, 0.7);
+    opacity: 0;
+    transition: opacity 0.5s linear(0 0%, 1 10%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.tekstGarage p {
+    display:none;
+}
+
+#garage:hover .tekstGarage {
+    opacity:1;
+    box-shadow: 0 0 8px 8px rgb(255,236,39);
+}
+
+#garage:hover .tekstGarage p{
+    display: block;
+    font-size: 25px;
+
 }
 
 #garage:hover {
-    background-color: yellow;
+    transform: scale(1.03);
 }
+
 
 #nauka {
     background-image: url("./assets/city/szkoła.png");
@@ -390,10 +419,42 @@ h1 {
     background-size: cover;
     margin: 151px 10px 0 0;
     box-sizing: border-box;
+    background-position: inherit;
+    position: relative;
+    display:inline-block;
+}
+
+.tekstNauka {
+    position: absolute;
+    margin-top: 7px;
+    margin-left: 3px;
+    width: 244px;
+    height: 400px;
+    background-color: rgba(255, 241, 232, 0.7);
+    opacity: 0;
+    transition: opacity 0.5s linear(0 0%, 1 10%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.tekstNauka p {
+    display:none;
+}
+
+#nauka:hover .tekstNauka {
+    opacity:1;
+    box-shadow: 0 0 8px 8px rgb(255,236,39);
+}
+
+#nauka:hover .tekstNauka p{
+    display: block;
+    font-size: 25px;
 }
 
 #nauka:hover {
-    background-color: yellow;
+    transform: scale(1.01);
 }
 
 #biblioteka {
@@ -403,10 +464,42 @@ h1 {
     background-size: cover;
     margin-top: 151px;
     box-sizing: border-box;
+    background-position: inherit;
+    position: relative;
+    display:inline-block;
+}
+
+.tekstBiblio {
+    position: absolute;
+    margin-top: 8px;
+    margin-left: 3px;
+    width: 297px;
+    height: 399px;
+    background-color: rgba(255, 241, 232, 0.7);
+    opacity: 0;
+    transition: opacity 0.5s linear(0 0%, 1 10%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.tekstBiblio p {
+    display:none;
+}
+
+#biblioteka:hover .tekstBiblio {
+    opacity:1;
+    box-shadow: 0 0 8px 8px rgb(255,236,39);
+}
+
+#biblioteka:hover .tekstBiblio p{
+    display: block;
+    font-size: 25px;
 }
 
 #biblioteka:hover {
-    background-color: yellow;
+    transform: scale(1.01);
 }
 
 #salon {
@@ -416,12 +509,43 @@ h1 {
     background-size: cover;
     margin-top: 206px;
     box-sizing: border-box;
+    background-position: inherit;
+    position: relative;
+    display:inline-block;
+}
+
+.tekstSalon {
+    position: absolute;
+    margin-top: 18px;
+    margin-left: 4px;
+    width: 257px;
+    height: 334px;
+    background-color: rgba(255, 241, 232, 0.7);
+    opacity: 0;
+    transition: opacity 0.5s linear(0 0%, 1 10%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.tekstSalon p {
+    display:none;
+}
+
+#salon:hover .tekstSalon {
+    opacity:1;
+    box-shadow: 0 0 8px 8px rgb(255,236,39);
+}
+
+#salon:hover .tekstSalon p{
+    display: block;
+    font-size: 25px;
 }
 
 #salon:hover {
-    background-color: yellow;
+    transform: scale(1.01);
 }
-
 
 /* biblioteka.html */
 
