--- a/frontend/style.css
+++ b/frontend/style.css
@@ -16,7 +16,7 @@ body {
     zoom:1;
 }
 .body {
-    width:1436px;
+    width: 1436px;
     height: 737px;
     margin: 0 auto;
     display: flex;
@@ -172,13 +172,20 @@ h1 {
     padding-top:  4px;
 }
 
-#screen {
+#ramka{
+    border: 30px solid transparent;
+    border-image: url("./assets/frame.png") 10 round;
     width: 1296px;
+    /*height: 100%;*/
+    box-sizing: border-box;
+}
+
+
+#screen {
+    width: 100%;
     height: 729px;
     box-sizing: border-box;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
     flex-wrap:wrap;
     background-color: white;
 }
@@ -273,7 +280,7 @@ h1 {
 
 #kiosk {
     background-image: url("./assets/city/zaba.png");
-    width: 150px;
+    width: 11%;
     height: 443px;
     background-size: cover;
     margin-top: 113px;
@@ -286,8 +293,8 @@ h1 {
 .tekstKiosk {
     position: absolute;
     top:19px;
-    right:15px;
-    width:135px;
+    /*right:15px;*/
+    width:100%;
     height:424px;
     background-color: rgba(255, 241, 232, 0.7);
     opacity: 0;
@@ -320,7 +327,7 @@ h1 {
 
 #race {
     background-image: url("./assets/city/tormenu.png");
-    width: 160px;
+    width: 12%;
     height: 150px;
     background-size: cover;
     margin-top: 406px;
@@ -334,7 +341,7 @@ h1 {
     position: absolute;
     margin-top: 10px;
     margin-left: 10px;
-    width: 145px;
+    width: 91%;
     height: 140px;
     background-color: rgba(255, 241, 232, 0.7);
     opacity: 0;
@@ -367,7 +374,7 @@ h1 {
 
 #garage {
     background-image: url("./assets/city/garaz.png");
-    width: 166px;
+    width: 13%;
     height: 149px;
     background-size: cover;
     margin-top: 407px;
@@ -381,8 +388,8 @@ h1 {
     position: absolute;
     margin-top: 3px;
     margin-left: 3px;
-    width: 158px;
-    height: 147px;
+    width: 156px;
+    height: 146px;
     background-color: rgba(255, 241, 232, 0.7);
     opacity: 0;
     transition: opacity 0.5s linear(0 0%, 1 10%);
@@ -414,7 +421,7 @@ h1 {
 
 #nauka {
     background-image: url("./assets/city/szkoła.png");
-    width: 250px;
+    width: 19%;
     height: 405px;
     background-size: cover;
     margin: 151px 10px 0 0;
@@ -428,8 +435,8 @@ h1 {
     position: absolute;
     margin-top: 7px;
     margin-left: 3px;
-    width: 244px;
-    height: 400px;
+    width: 100%;
+    height: 399px;
     background-color: rgba(255, 241, 232, 0.7);
     opacity: 0;
     transition: opacity 0.5s linear(0 0%, 1 10%);
@@ -459,7 +466,7 @@ h1 {
 
 #biblioteka {
     background-image: url("./assets/city/biblio.png");
-    width: 300px;
+    width: 23%;
     height: 405px;
     background-size: cover;
     margin-top: 151px;
@@ -473,8 +480,8 @@ h1 {
     position: absolute;
     margin-top: 8px;
     margin-left: 3px;
-    width: 297px;
-    height: 399px;
+    width: 99%;
+    height: 398px;
     background-color: rgba(255, 241, 232, 0.7);
     opacity: 0;
     transition: opacity 0.5s linear(0 0%, 1 10%);
@@ -504,7 +511,7 @@ h1 {
 
 #salon {
     background-image: url("./assets/city/salon.png");
-    width: 260px;
+    width: 21%;
     height: 350px;
     background-size: cover;
     margin-top: 206px;
@@ -517,8 +524,8 @@ h1 {
 .tekstSalon {
     position: absolute;
     margin-top: 18px;
-    margin-left: 4px;
-    width: 257px;
+    margin-left: 8px;
+    width: 97%;
     height: 334px;
     background-color: rgba(255, 241, 232, 0.7);
     opacity: 0;
@@ -551,39 +558,47 @@ h1 {
 
 
 #ostrzegawcze {
-    background-color: lime;
+    background-image: url("./assets/books/book1.png");
+    background-size: cover;
 }
 
 #zakazu {
-    background-color: aqua;
+    background-image: url("./assets/books/book2.png");
+    background-size: cover;
 }
 
 #nakazu {
-    background-color: blue;
+    background-image: url("./assets/books/book3.png");
+    background-size: cover;
 }
 
 #informacyjne {
-    background-color: bisque;
+    background-image: url("./assets/books/book4.png");
+    background-size: cover;
 }
 
 #uzupelniajace {
-    background-color: blueviolet;
+    background-image: url("./assets/books/book5.png");
+    background-size: cover;
 }
 
 #poziome {
-    background-color: burlywood;
+    background-image: url("./assets/books/book6.png");
+    background-size: cover;
 }
 
 #swietlne {
-    background-color: coral;
+    background-image: url("./assets/books/book7.png");
+    background-size: cover;
 }
 
 #kodeks {
-    background-color: greenyellow;
+    background-image: url("./assets/books/book8.png");
+    background-size: cover;
 }
 
 .bookbutton{
-    width: 162px;
+    width: 12.5%;
     height: 725px;
     border-radius: 20px;
     margin-top: 1px;
@@ -592,40 +607,62 @@ h1 {
 }
 
 #book {
-    width: 1296px;
+    width: 100%;
     height: 729px;
-    float: left;
-    background-color: red;
+    position: relative;
+    background-image: url("./assets/background/background3.png");
+    /*background-size: cover;*/
+    /*background-color: red;*/
     display:none;
+    box-sizing: border-box;
 }
 
 
 #leftArrow{
-    width: 150px;
-    height: 729px;
-    float: left;
-    background-color: black;
+    width: 4%;
+    height: 46px;
+    margin: 341px 22px 342px 52px;
+    position: relative;
+    box-sizing: border-box;
+    background-image: url("./assets/menu/buttonarrowleft1.png");
+    background-size: cover;
+}
+
+#leftArrow:hover {
+    background-image: url("./assets/menu/buttonarrowleft.png");
+    background-size: cover;
 }
 
 #info {
     width: 996px;
     height: 619px;
-    float: left;
+    position: relative;
+    box-sizing: border-box;
     background-color: blue;
+    display: flex;
+    flex-wrap: wrap;
     margin: 30px 0 80px 0;
 }
 
 #rightArrow {
-    width: 150px;
-    height: 729px;
-    float: left;
-    background-color: black;
+    width: 4%;
+    height: 46px;
+    margin: 341px 52px 342px 22px;
+    position: relative;
+    box-sizing: border-box;
+    background-image: url("./assets/menu/buttonarrow1.png");
+    background-size: cover;
+}
+
+#rightArrow:hover {
+    background-image: url("./assets/menu/buttonarrow.png");
+    background-size: cover;
 }
 
 #photoInfo {
     width: 300px;
     height: 250px;
-    float:left;
+    box-sizing: border-box;
     background-color: aqua;
     margin: 50px 0 0 50px;
 }
@@ -633,7 +670,7 @@ h1 {
 #titleInfo {
     width: 500px;
     height: 200px;
-    float:left;
+    box-sizing: border-box;
     background-color: blueviolet;
     margin: 70px 73px 30px 73px;
 }
@@ -645,7 +682,7 @@ h1 {
 }
 
 #aboutInfo {
-    float:left;
+    box-sizing: border-box;
     width: 896px;
     height: 229px;
     margin: 50px;
@@ -663,7 +700,7 @@ h1 {
     height: 46px;
     background-image: url("./assets/menu/powrot1.png");
     background-size: cover;
-    float:left;
+    box-sizing: border-box;
     margin: 5px 458px 25px 458px ;
 }
 
@@ -678,22 +715,24 @@ h1 {
 
 #oknaWybor {
     box-sizing: border-box;
-    width: 448px;
+    width: 35.83%;
     height: 265px;
     margin: 100px 50px 50px 150px;
     background-color: greenyellow;
+    padding: 20px 20px 20px 10px;
+    font-size: 26px;
+
 }
 
 #empty {
-    width: 448px;
+    width: 35.83%;
     height: 265px;
     box-sizing: border-box;
     margin: 100px 150px 50px 0;
-    background-color: darkorange;
 }
 
 #znaki {
-    width: 448px;
+    width: 35.83%;
     height: 264px;
     background-color: chartreuse;
     margin: 0 50px 100px 150px;
@@ -701,21 +740,26 @@ h1 {
 }
 
 #kodeksNauka {
-    width: 448px;
+    width: 35.83%;
     height: 264px;
     background-color: aqua;
     margin: 0 150px 100px 0;
     box-sizing: border-box;
 }
 
+.checkboxZnaki {
+    width: 21px;
+    height: 21px;
+}
+
 /*  quiz   */
 
-#quiz, #quizEnd, #AllStatsInfo {
-    width: 1296px;
+#quiz, #quizEnd {
+    width: 100%;
     height: 729px;
     box-sizing: border-box;
     display: none;
-    background-color: blueviolet;
+    background-image: url("./assets/background/background4.png");
 }
 
 #boxQuiz {
@@ -729,54 +773,54 @@ h1 {
 }
 
 #poprawneSymbol {
-    width: 448px;
+    width: 40%;
     height: 40px;
     background-color: bisque;
     box-sizing: border-box;
 }
 
 #poprawne {
-    width: 100px;
+    width: 10%;
     height: 40px;
     background-color: #1d2b53;
     box-sizing: border-box;
 }
 
 #niepoprawneSymbol {
-    width: 100px;
+    width: 10%;
     height: 40px;
     background-color: darkkhaki;
     box-sizing: border-box;
 }
 
 #niepoprawne {
-    width: 448px;
+    width: 40%;
     height: 40px;
     background-color: #1d2b53;
     box-sizing: border-box;
 }
 
 #pytanie {
-    width: 498px;
+    width: 46.13%;
     height: 549px;
-    margin: 50px 50px 0 0;
+    margin: 50px 40px 0 0;
     background-color: crimson;
     box-sizing: border-box;
 }
 
 #ans {
-    width: 498px;
+    width: 46.13%;
     height: 549px;
     background-color: blue;
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     align-content: space-around;
-    margin: 50px 0 0 50px;
+    margin: 50px 0 0 40px;
 }
 
 .answer {
-    width: 498px;
+    width: 100%;
     height: 130px;
     background-color: brown;
     box-sizing: border-box;
@@ -826,7 +870,7 @@ h1 {
 /* KIOSK.HTML */
 
 #babolotStats {
-    width: 548px;
+    width: 41.5%;
     height: 264px;
     margin: 100px 0 0 100px;
     box-sizing: border-box;
@@ -841,7 +885,7 @@ h1 {
 }
 
 #holeRaceStats {
-    width: 548px;
+    width: 41.5%;
     height: 264px;
     margin: 100px 100px 0 0;
     box-sizing: border-box;
@@ -849,7 +893,7 @@ h1 {
 }
 
 #quizyStats {
-    width: 548px;
+    width: 41.5%;
     height: 264px;
     margin: 0 0 101px 100px;
     box-sizing: border-box;
@@ -857,7 +901,7 @@ h1 {
 }
 
 #XP {
-    width: 548px;
+    width: 41.5%;
     height: 264px;
     margin: 0 100px 101px 0;
     box-sizing: border-box;
@@ -875,19 +919,69 @@ h1 {
     border-radius: 50%;
 }
 
+#AllStatsInfo {
+    width: 100%;
+    height: 729px;
+    box-sizing: border-box;
+    display: none;
+    background-image: url("./assets/background/background2.png");
+    background-repeat: repeat;
+    background-size: auto;
+}
 
+#statsDiv {
+    box-sizing: border-box;
+    width:1096px;
+    height: 629px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+}
+
+table {
+    box-sizing: border-box;
+    border-collapse: separate;
+    border-spacing: 0 10px;
+    width: 800px;
+    height: 483px;
+    border-radius: 20px;
+    empty-cells: hide;
+}
+
+tr {
+    background-image: radial-gradient(#f3ef7d 50%,#ffa300 );
+}
+
+td, th {
+    padding: 8px;
+    text-align: center;
+    border: 3px solid #be1250;
+    border-radius: 10px;
+    font-family: "Footlight MT Light";
+    color:#111d35;
+}
+
+th {
+    font-size: 20px;
+}
+
+td {
+    font-size: 18px;
+}
 
 /* SALON.HTML */
 
 #animacjaAuta {
-    width: 896px;
+    width: 70%;
     height: 729px;
     box-sizing: border-box;
     background-color: chartreuse;
 }
 
 #koloryOpcje {
-    width: 400px;
+    width: 30%;
     height: 729px;
     display:flex;
     flex-direction: column;
@@ -895,21 +989,21 @@ h1 {
 }
 
 #kolory {
-    width: 400px;
+    width: 100%;
     height: 479px;
     box-sizing: border-box;
     background-color: skyblue;
 }
 
 #resetUlepszen {
-    width: 400px;
+    width: 100%;
     height: 150px;
     box-sizing: border-box;
     background-color: cornsilk;
 }
 
 #zapiszNowyKolor {
-    width: 400px;
+    width: 100%;
     height: 100px;
     box-sizing: border-box;
     background-color: sandybrown;
