--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1008,3 +1008,89 @@ td {
     box-sizing: border-box;
     background-color: sandybrown;
 }
+
+
+/* GARAGE.HTML */
+
+#samochod {
+    width: 50%;
+    height: 729px;
+    background-color: red;
+    display: flex;
+    box-sizing: border-box;
+}
+
+.Garage {
+    width:50%;
+    height: 729px;
+    display:flex;
+    flex-direction: column;
+    background-color: #be1250;
+    box-sizing: border-box;
+}
+
+#statystyki {
+    width: 100%;
+    height: 40%;
+    box-sizing: border-box;
+    display: flex;
+    background-color: #065ab5;
+}
+
+#updateGarage {
+    width: 100%;
+    height: 60%;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    align-content: center;
+    justify-content: center;
+    background-color: #f3ef7d;
+}
+
+.updateGarage {
+    width: 30%;
+    height: 80%;
+    box-sizing: border-box;
+    background-color: #fff1e8;
+    margin: 0 10px 0 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.LVL {
+    width:60%;
+    height: 25%;
+    box-sizing: border-box;
+    background-color: #ffa300;
+}
+
+.cena {
+    width:40%;
+    height: 25%;
+    box-sizing: border-box;
+    background-color: skyblue;
+}
+
+.zdjGarage {
+    width:90%;
+    height: 50%;
+    box-sizing: border-box;
+}
+
+#amorzdj {
+    background-image: url("./assets/garage/amortyzator.png");
+    background-size: cover;
+}
+
+#zdezdj {
+    background-image: url("./assets/garage/zderzak.png");
+    background-size: cover;
+}
+
+#silzdj {
+    background-image: url("./assets/garage/silnik.png");
+    background-size: cover;
+}
