--- a/frontend/style.css
+++ b/frontend/style.css
@@ -872,12 +872,19 @@ h1 {
 #babolotStats {
     width: 41.5%;
     height: 264px;
-    margin: 100px 100px 0 200px;
+    margin: 100px 0 0 100px;
     box-sizing: border-box;
     background-color: crimson;
-    /*background-image: url("./assets/garage/kioskbabolot.jpg");
-    background-size: cover;*/
     border-top-left-radius: 20px;
+    border: 5px solid white;
+}
+
+#imagebabolotStats {
+    margin: 0 auto;
+    width:50%;
+    height: 100%;
+    background-image: url("./assets/garage/kioskbabolot.png");
+    background-size: cover;
 }
 
 .Stats:hover {
@@ -891,9 +898,15 @@ h1 {
     margin: 100px 100px 0 0;
     box-sizing: border-box;
     background-color: #1d2b53;
+    border-top-right-radius: 20px;
+}
+
+#imageholeStats {
+    margin: 0 auto;
+    width:50%;
+    height: 100%;
     background-image: url("./assets/garage/kioskholerace.png");
     background-size: cover;
-    border-top-right-radius: 20px;
 }
 
 #quizyStats {
@@ -905,6 +918,14 @@ h1 {
     border-bottom-left-radius: 20px;
 }
 
+#imagequizyStats {
+    margin: 0 auto;
+    width:50%;
+    height: 100%;
+    background-image: url("./assets/garage/kioskquizy.png");
+    background-size: cover;
+}
+
 #XP {
     width: 41.5%;
     height: 264px;
@@ -912,6 +933,14 @@ h1 {
     box-sizing: border-box;
     background-color: crimson;
     border-bottom-right-radius: 20px;
+}
+
+#imageXP {
+    margin: 0 auto;
+    width:50%;
+    height: 100%;
+    background-image: url("./assets/garage/xp (2).png");
+    background-size: cover;
 }
 
 #lvl {
