--- a/frontend/style.css
+++ b/frontend/style.css
@@ -4,12 +4,12 @@
     --primary-color: #fff1e8;
     --border: black;
     --h1-color: black;
-    --button-color: rgb(41,173,255);
+    --button-color: /*rgb(41,173,255)*/#1d2b53;
 }
 
 body {
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-image: url("./assets/background/bc.png");
     background-repeat: repeat;
     background-size: cover;
@@ -139,7 +139,7 @@ h1 {
     justify-content: center;
     align-items: center;
     background-color: #1d2b53;
-    position: relative;
+    /*position: relative;*/
 
 }
 
@@ -149,16 +149,18 @@ h1 {
     border-radius: 70%;
     text-align: center;
     transform: scale(1.2);
+    position: relative;
     z-index: 1;
 }
 
 .name {
-    position: absolute;
-    text-align: center;
-    top: 10px;
-    color: white;
+    top: 50px;
     z-index: 2;
-    font-size: 25px;
+    width:150px;
+    height: 120px;
+    background-image: url("./assets/background/grandmalogo.png");
+    background-size: cover;
+    position: absolute;
 }
 
 
@@ -216,6 +218,10 @@ h1 {
     width: 90px;
     height: 50px;
     float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
 }
 
 .settingsButton {
@@ -705,7 +711,6 @@ h1 {
     height: 229px;
     margin: 50px 50px 30px 50px;
     background-color: #d6785a;
-    font-family: "Roboto Regular 400";
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1039,7 +1044,7 @@ h1 {
 
 #babolotStats {
     margin: 100px 0 0 100px;
-    background-color: #008751;
+    background-color:  #a8e72e;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
@@ -1062,7 +1067,7 @@ h1 {
 
 #holeraceStats {
     margin: 100px 0 0 0;
-    background-color: #a8e72e;
+    background-color: #008751;
 }
 
 #imageholeStats {
@@ -1182,7 +1187,6 @@ td, th {
     text-align: center;
     border: 3px solid #be1250;
     border-radius: 10px;
-    font-family: "Footlight MT Light";
     color:#111d35;
 }
 
@@ -1433,6 +1437,8 @@ td {
     background-position: center;
     filter: grayscale(60%);
     margin: 19% 1.5%;
+    box-shadow: 0 7px 11px 0 rgba(0, 0, 0, 0.5), 0 9px 23px 0 rgba(0, 0, 0, 0.29);
+    border: 10px outset blue;
 }
 
 #racehole {
@@ -1447,6 +1453,8 @@ td {
     background-position: center;
     filter: grayscale(60%);
     margin: 19% 1.5%;
+    box-shadow: 0 7px 11px 0 rgba(0, 0, 0, 0.5), 0 9px 23px 0 rgba(0, 0, 0, 0.29);
+    border: 10px outset yellow;
 }
 
 #runOut {
@@ -1461,6 +1469,15 @@ td {
     background-position: center;
     filter: grayscale(60%);
     margin: 19% 1.5%;
+    box-shadow: 0 7px 11px 0 rgba(0, 0, 0, 0.5), 0 9px 23px 0 rgba(0, 0, 0, 0.29);
+    border: 10px outset red;
+}
+
+#babolot:hover, #racehole:hover, #runOut:hover {
+    filter: grayscale(0%);
+    box-shadow: 0 0 11px 11px white, 0 0 23px 23px ghostwhite;
+    transition: 0.3s;
+    transform: scale(1.02);
 }
 
 .imageLogo {
